--- a/index.html
+++ b/index.html
@@ -17,22 +17,28 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <main class="ping__main-page">
+    <div class="ping__container">
       <header>
         <img src="./images/logo.svg" alt="Ping Logo" />
       </header>
-      <section class="ping__section">
-        <h1 class="ping__main-heading">
-          We are launching <strong>soon!</strong>
-        </h1>
-        <form>
-          <div class="form-control">
-            <input type="email" placeholder="Your email address..." />
-          </div>
-          <button type="submit">Notify Me</button>
-        </form>
-      </section>
-      <img src="./images/illustration-dashboard.png" alt="Ping Dashboard" />
+      <main class="ping__main-page">
+        <section class="ping__section">
+          <h1 class="ping__main-heading">
+            We are launching <strong>soon!</strong>
+          </h1>
+          <p class="ping__message">Subscribe and get notified</p>
+          <form>
+            <div class="form-control">
+              <input
+                type="email"
+                class="email__input"
+                placeholder="Your email address..." />
+            </div>
+            <button class="submit-btn" type="submit">Notify Me</button>
+          </form>
+        </section>
+        <img src="./images/illustration-dashboard.png" alt="Ping Dashboard" />
+      </main>
 
       <footer>
         <ul>
@@ -43,21 +49,6 @@
 
         <p>&copy; Copyright Ping. All rights reserved</p>
       </footer>
-    </main>
-    <!-- 
-  We are launching soon!
-
-  Subscribe and get notified
-
-  Notify Me
-
-  &copy; Copyright Ping. All rights reserved.
-
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer> -->
+    </div>
   </body>
 </html>
