--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <link rel="stylesheet" href="style.css" />
+    <script defer src="main.js"></script>
   </head>
   <body>
     <div class="ping__container">
