Feat: Basic submission of form (WIP)

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             We are launching <strong>soon!</strong>
           </h1>
           <p class="ping__message">Subscribe and get notified</p>
-          <form>
+          <form class="ping__form">
             <div class="form-control">
               <input
                 type="email"
