WIP: Active State

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             We are launching <strong>soon!</strong>
           </h1>
           <p class="ping__message">Subscribe and get notified</p>
-          <form class="ping__form">
+          <form class="ping__form" novalidate>
             <div class="form-control">
               <input
                 type="email"
