WIP: Active States

--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@
             <div class="form-control">
               <input
                 type="email"
-                class="email__input"
+                class="email__input input__invalid"
                 placeholder="Your email address..." />
+              <p class="invalid-message">
+                Please provide a valid email address
+              </p>
             </div>
             <button class="submit-btn" type="submit">Notify Me</button>
           </form>
