--- a/index.html
+++ b/index.html
@@ -32,13 +32,14 @@
             We are launching <strong>soon!</strong>
           </h1>
           <p class="ping__message">Subscribe and get notified</p>
-          <form class="ping__form" novalidate>
+          <form class="ping__form">
             <div class="form-control">
               <input
                 type="email"
-                class="email__input input__invalid"
-                placeholder="Your email address..." />
-              <p class="invalid-message">
+                class="email__input"
+                placeholder="Your email address..."
+                value="" />
+              <p class="invalid-message hide">
                 Please provide a valid email address
               </p>
             </div>
